[gd_scene load_steps=6 format=3 uid="uid://cowsa8786gxly"]

[ext_resource type="Script" path="res://module.gd" id="1_d2m4f"]

[sub_resource type="BoxMesh" id="BoxMesh_7x2bg"]

[sub_resource type="SphereShape3D" id="1"]
radius = 0.31102

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_otd2t"]
transparency = 1
blend_mode = 1
albedo_color = Color(0, 0.0601639, 0.484111, 1)

[sub_resource type="BoxMesh" id="BoxMesh_xtty0"]
material = SubResource("StandardMaterial3D_otd2t")

[node name="module" type="Node3D"]
script = ExtResource("1_d2m4f")

[node name="mesh_instance" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_7x2bg")

[node name="col_area" type="Area3D" parent="."]

[node name="col_shape" type="CollisionShape3D" parent="col_area"]
shape = SubResource("1")

[node name="Highlight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_xtty0")

[connection signal="mouse_entered" from="col_area" to="." method="_on_col_area_mouse_entered"]
[connection signal="mouse_exited" from="col_area" to="." method="_on_col_area_mouse_exited"]
